--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,4 +1,4 @@
-FROM node:8.10-alpine
+FROM node:carbon-alpine
 
 ENV NODE_ENV=development
 
@@ -12,6 +12,8 @@ RUN apk update \
     python
 
 RUN npm config set unsafe-perm true
+
+RUN npm install -g npm@6.9.0
 
 WORKDIR /bitcore
 
