--- a/packages/bitcore-client/package.json
+++ b/packages/bitcore-client/package.json
@@ -22,9 +22,9 @@
     "async": "^2.5.0",
     "bcrypt": "^2.0.1",
     "bcryptjs": "^2.4.3",
-    "bitcore-lib": "^8.1.0",
-    "bitcore-lib-cash": "^8.1.0",
-    "bitcore-mnemonic": "^8.1.0",
+    "bitcore-lib": "file:/../bitcore-lib",
+    "bitcore-lib-cash": "file:/../bitcore-lib-cash",
+    "bitcore-mnemonic": "file:/../bitcore-mnemonic",
     "commander": "^2.15.1",
     "elliptic": "^6.4.1",
     "ethereumjs-tx": "^1.3.7",
