--- a/packages/bitcore-p2p/package.json
+++ b/packages/bitcore-p2p/package.json
@@ -20,13 +20,13 @@
   },
   "dependencies": {
     "bcoin": "1.0.0-beta.12",
-    "bitcore-lib": "^8.1.0",
+    "bitcore-lib": "file:../bitcore-lib",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
     "socks5-client": "^0.3.6"
   },
   "devDependencies": {
-    "bitcore-build": "^8.1.0",
+    "bitcore-build": "file:../bitcore-build",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^4.0.0",
