--- a/packages/insight-previous/package.json
+++ b/packages/insight-previous/package.json
@@ -47,8 +47,8 @@
     "@angular/platform-browser-dynamic": "4.4.7",
     "angular2-moment": "1.6.0",
     "angular2-qrcode": "2.0.1",
-    "bitcore-lib": "8.1.0",
-    "bitcore-lib-cash": "8.1.0",
+    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-lib-cash": "file:../bitcore-lib-cash",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "lodash": "4.17.11",
