--- a/packages/bitcore-p2p-cash/package.json
+++ b/packages/bitcore-p2p-cash/package.json
@@ -60,14 +60,14 @@
     "url": "https://github.com/bitpay/bitcore-p2p.git"
   },
   "dependencies": {
-    "bitcore-lib": "file:../bitcore-lib",
-    "bitcore-lib-cash": "file:../bitcore-lib-cash",
+    "bitcore-lib": "^8.1.0",
+    "bitcore-lib-cash": "^8.1.0",
     "bloom-filter": "^0.2.0",
     "buffers": "bitpay/node-buffers#v0.1.2-bitpay",
     "socks5-client": "^0.3.6"
   },
   "devDependencies": {
-    "bitcore-build": "file:../bitcore-build",
+    "bitcore-build": "^8.1.0",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^4.0.0",
