--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -21,6 +21,8 @@ COPY package*.json ./
 COPY lerna.json ./
 RUN npm install
 
+COPY . .
+
 COPY ./packages/bitcore-build/package*.json ./packages/bitcore-build/
 COPY ./packages/bitcore-client/package*.json ./packages/bitcore-client/
 COPY ./packages/bitcore-lib/package*.json ./packages/bitcore-lib/
@@ -50,6 +52,6 @@ RUN ./node_modules/.bin/lerna bootstrap
 
 RUN rm /var/cache/apk/*
 
-COPY . .
+RUN ls -lah ./packages/bitcore-wallet-service/node_modules
 
 RUN npm run compile --prefix packages/bitcore-node
