--- a/packages/bitcore-wallet-service/package.json
+++ b/packages/bitcore-wallet-service/package.json
@@ -23,7 +23,7 @@
     "@sendgrid/mail": "^6.3.1",
     "async": "^0.9.2",
     "bitcore-lib": "file:../bitcore-lib",
-    "bitcore-lib-cash": "file:../bitcore-lib-cash",
+    "bitcore-lib-cash": "file:../bitcore-cash",
     "body-parser": "^1.11.0",
     "compression": "^1.6.2",
     "email-validator": "^1.0.1",
