Revert "fixed local deps"
This reverts commit 895c0f17bbcef5518430a2236cde2869820b0086.

--- a/packages/bitcore-lib/package.json
+++ b/packages/bitcore-lib/package.json
@@ -43,7 +43,7 @@
     "lodash": "=4.17.11"
   },
   "devDependencies": {
-    "bitcore-build": "file:../bitcore-build",
+    "bitcore-build": "^8.1.0",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
