Revert "use local deps"
This reverts commit 5e8f3b4e6e78ca7cfd5b91c5001144f78f61e52c.

--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,4 +1,4 @@
-FROM node:carbon-alpine
+FROM node:8.10-alpine
 
 ENV NODE_ENV=development
 
@@ -12,8 +12,6 @@ RUN apk update \
     python
 
 RUN npm config set unsafe-perm true
-
-RUN npm install -g npm@6.9.0
 
 WORKDIR /bitcore
 
