--- a/packages/bitcore-payment-protocol/package.json
+++ b/packages/bitcore-payment-protocol/package.json
@@ -53,13 +53,13 @@
     "asn1.js": "^5.0.1",
     "asn1.js-rfc3280": "^4.0.0",
     "asn1.js-rfc5280": "^3.0.0",
-    "bitcore-lib": "file:../bitcore-lib",
+    "bitcore-lib": "^8.1.0",
     "bs58": "^4.0.1",
     "jsrsasign": "^8.0.12",
     "protobufjs": "=5.0.3"
   },
   "devDependencies": {
-    "bitcore-build": "file:../bitcore-build",
+    "bitcore-build": "^8.1.0",
     "brfs": "^2.0.1",
     "chai": "^4.2.0",
     "gulp": "^4.0.0",
