--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -34,10 +34,11 @@ COPY ./packages/bitcore-wallet/package*.json ./packages/bitcore-wallet/
 COPY ./packages/bitcore-wallet-client/package*.json ./packages/bitcore-wallet-client/
 COPY ./packages/bitcore-wallet-service/package*.json ./packages/bitcore-wallet-service/
 
-#COPY ./packages/bitcore-wallet-ui/package*.json ./packages/bitcore-wallet-service/
+#COPY ./packages/bitcore-wallet-ui/package*.json ./packages/bitcore-wallet-ui/
 #COPY ./packages/insight/package*.json ./packages/insight/
 #COPY ./packages/insight-previous/package*.json ./packages/insight-previous/
 
+RUN npm cache verify
 RUN npm run bootstrap
 
 RUN apk del \
